name:                sgSafe
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/carlhaken/sgSafe#readme
license:             BSD3
license-file:        LICENSE
author:              Carl Haken
maintainer:          carlhaken@gmail.com
copyright:           Copyright 2016 Carl Haken. All rights reserved.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable sgSafe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , random
                     , array
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/carlhaken/sgSafe
